# ZEKRO

./: .gitignore  README.md  docker-compose-hwtpm.yml  docker-compose.yml
swtpm/: Dockerfile
zekro/: .gitignore  CMakeLists.txt  Dockerfile  main.cpp
zekro/include/: prover.h  timing.h  tpm.h
zekro/src/: prover.cpp  tpm.cpp
